// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SearchAndFilter — responsive checks renders a compact snapshot (mobile, tablet, desktop) for visual regression: searchandfilter-desktop 1`] = `
<DocumentFragment>
  <div
    class="modern-filter-panel bg-gradient-to-br from-slate-900 via-slate-800 to-slate-900 rounded-xl border border-slate-700/50 p-4 mb-4 sm:p-6 text-white shadow-2xl backdrop-blur-xl bg-opacity-90"
    style="width: 1280px;"
  >
    <div
      class="space-y-4"
    >
      <div>
        <label
          class="block text-sm font-bold text-slate-200 mb-2 flex items-center gap-2"
          for="search"
        >
          <svg
            class="h-4 w-4 text-blue-400"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          Search Releases
        </label>
        <div
          class="relative"
        >
          <div
            class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none"
          >
            <svg
              class="h-5 w-5 text-slate-400"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <input
            autocomplete="off"
            class="block w-full pl-10 pr-3 py-3 bg-slate-800/50 border border-slate-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 text-white placeholder-slate-400 transition-all duration-200 hover:bg-slate-800/70"
            id="search"
            placeholder="Search by title, artist, or label..."
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        aria-hidden="false"
        class="transition-all duration-200 ease-in-out overflow-hidden max-h-[1200px] opacity-100 translate-y-0 py-1"
      >
        <div
          class="flex items-center justify-between mb-3"
        >
          <h3
            class="text-sm font-semibold text-slate-200 flex items-center gap-2"
          >
            <svg
              class="w-4 h-4 text-blue-400"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 4a1 1 0 011-1h16a1 1 0 011 1v2.586a1 1 0 01-.293.707l-6.414 6.414a1 1 0 00-.293.707V17l-4 4v-6.586a1 1 0 00-.293-.707L3.293 7.293A1 1 0 013 6.586V4z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
            Filters
          </h3>
          <button
            aria-label="Close filters"
            class="inline-flex items-center justify-center p-1.5 rounded-lg hover:bg-slate-700/50 transition-colors"
            title="Close filters"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-x w-4 h-4 text-slate-300"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 6 6 18"
              />
              <path
                d="m6 6 12 12"
              />
            </svg>
          </button>
        </div>
        <div
          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"
        >
          <div
            class="group bg-slate-800/40 rounded-lg border border-slate-700/50 p-4 transition-all duration-200 hover:bg-slate-800/60 hover:border-blue-500/30 hover:shadow-lg hover:shadow-blue-500/10"
          >
            <label
              class="block text-sm font-medium text-slate-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-blue-400"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Artist
            </label>
            <select
              data-testid="artist-dropdown"
            >
              <option
                value=""
              >
                Select Artist
              </option>
              <option
                value="1"
              >
                Test Artist
              </option>
            </select>
          </div>
          <div
            class="group bg-slate-800/40 rounded-lg border border-slate-700/50 p-4 transition-all duration-200 hover:bg-slate-800/60 hover:border-purple-500/30 hover:shadow-lg hover:shadow-purple-500/10"
          >
            <label
              class="block text-sm font-medium text-slate-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-purple-400"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9 19V6l12-3v13M9 19c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zm12-3c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zM9 10l12-3"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Genre
            </label>
            <select
              data-testid="genre-dropdown"
            >
              <option
                value=""
              >
                Select Genre
              </option>
              <option
                value="1"
              >
                Metal
              </option>
            </select>
          </div>
          <div
            class="group bg-slate-800/40 rounded-lg border border-slate-700/50 p-4 transition-all duration-200 hover:bg-slate-800/60 hover:border-green-500/30 hover:shadow-lg hover:shadow-green-500/10"
          >
            <label
              class="block text-sm font-medium text-slate-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-green-400"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 7h.01M7 3h5c.512 0 1.024.195 1.414.586l7 7a2 2 0 010 2.828l-7 7a2 2 0 01-2.828 0l-7-7A1.994 1.994 0 013 12V7a4 4 0 014-4z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Label
            </label>
            <select
              data-testid="label-dropdown"
            >
              <option
                value=""
              >
                Select Label
              </option>
              <option
                value="1"
              >
                Test Label
              </option>
            </select>
          </div>
          <div
            class="group bg-slate-800/40 rounded-lg border border-slate-700/50 p-4 transition-all duration-200 hover:bg-slate-800/60 hover:border-yellow-500/30 hover:shadow-lg hover:shadow-yellow-500/10"
          >
            <label
              class="block text-sm font-medium text-slate-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-yellow-400"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Country
            </label>
            <select
              data-testid="country-dropdown"
            >
              <option
                value=""
              >
                Select Country
              </option>
              <option
                value="1"
              >
                UK
              </option>
            </select>
          </div>
          <div
            class="group bg-slate-800/40 rounded-lg border border-slate-700/50 p-4 transition-all duration-200 hover:bg-slate-800/60 hover:border-pink-500/30 hover:shadow-lg hover:shadow-pink-500/10"
          >
            <label
              class="block text-sm font-medium text-slate-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-pink-400"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9 19V6l12-3v13M9 19c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zm12-3c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zM9 10l12-3"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="3"
                />
              </svg>
              Format
            </label>
            <select
              data-testid="format-dropdown"
            >
              <option
                value=""
              >
                Select Format
              </option>
              <option
                value="1"
              >
                Vinyl
              </option>
            </select>
          </div>
          <div
            class="group bg-slate-800/40 rounded-lg border border-slate-700/50 p-4 transition-all duration-200 hover:bg-slate-800/60 hover:border-red-500/30 hover:shadow-lg hover:shadow-red-500/10"
          >
            <label
              class="block text-sm font-medium text-slate-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-red-400"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 11a7 7 0 01-7 7m0 0a7 7 0 01-7-7m7 7v4m0 0H8m4 0h4m-4-8a3 3 0 01-3-3V5a3 3 0 116 0v6a3 3 0 01-3 3z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Recording Type
            </label>
            <div>
              <button
                type="button"
              >
                All recordings
              </button>
            </div>
          </div>
          <div
            class="group bg-slate-800/40 rounded-lg border border-slate-700/50 p-4 transition-all duration-200 hover:bg-slate-800/60 hover:border-cyan-500/30 hover:shadow-lg hover:shadow-cyan-500/10"
          >
            <label
              class="block text-sm font-medium text-slate-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-cyan-400"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              From Year
            </label>
            <input
              class="w-full px-3 py-2 bg-slate-700/50 border border-slate-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-cyan-500 focus:border-cyan-500 text-white placeholder-slate-400 transition-all"
              max="2025"
              min="1900"
              placeholder="e.g., 1970"
              type="number"
              value=""
            />
          </div>
          <div
            class="group bg-slate-800/40 rounded-lg border border-slate-700/50 p-4 transition-all duration-200 hover:bg-slate-800/60 hover:border-cyan-500/30 hover:shadow-lg hover:shadow-cyan-500/10"
          >
            <label
              class="block text-sm font-medium text-slate-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-cyan-400"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              To Year
            </label>
            <input
              class="w-full px-3 py-2 bg-slate-700/50 border border-slate-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-cyan-500 focus:border-cyan-500 text-white placeholder-slate-400 transition-all"
              max="2025"
              min="1900"
              placeholder="e.g., 2024"
              type="number"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchAndFilter — responsive checks renders a compact snapshot (mobile, tablet, desktop) for visual regression: searchandfilter-mobile 1`] = `
<DocumentFragment>
  <div
    class="modern-filter-panel bg-gradient-to-br from-slate-900 via-slate-800 to-slate-900 rounded-xl border border-slate-700/50 p-4 mb-4 sm:p-6 text-white shadow-2xl backdrop-blur-xl bg-opacity-90"
    style="width: 375px;"
  >
    <div
      class="space-y-4"
    >
      <div>
        <label
          class="block text-sm font-bold text-slate-200 mb-2 flex items-center gap-2"
          for="search"
        >
          <svg
            class="h-4 w-4 text-blue-400"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          Search Releases
        </label>
        <div
          class="relative"
        >
          <div
            class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none"
          >
            <svg
              class="h-5 w-5 text-slate-400"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <input
            autocomplete="off"
            class="block w-full pl-10 pr-3 py-3 bg-slate-800/50 border border-slate-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 text-white placeholder-slate-400 transition-all duration-200 hover:bg-slate-800/70"
            id="search"
            placeholder="Search by title, artist, or label..."
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        aria-hidden="false"
        class="transition-all duration-200 ease-in-out overflow-hidden max-h-[1200px] opacity-100 translate-y-0 py-1"
      >
        <div
          class="flex items-center justify-between mb-3"
        >
          <h3
            class="text-sm font-semibold text-slate-200 flex items-center gap-2"
          >
            <svg
              class="w-4 h-4 text-blue-400"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 4a1 1 0 011-1h16a1 1 0 011 1v2.586a1 1 0 01-.293.707l-6.414 6.414a1 1 0 00-.293.707V17l-4 4v-6.586a1 1 0 00-.293-.707L3.293 7.293A1 1 0 013 6.586V4z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
            Filters
          </h3>
          <button
            aria-label="Close filters"
            class="inline-flex items-center justify-center p-1.5 rounded-lg hover:bg-slate-700/50 transition-colors"
            title="Close filters"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-x w-4 h-4 text-slate-300"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 6 6 18"
              />
              <path
                d="m6 6 12 12"
              />
            </svg>
          </button>
        </div>
        <div
          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"
        >
          <div
            class="group bg-slate-800/40 rounded-lg border border-slate-700/50 p-4 transition-all duration-200 hover:bg-slate-800/60 hover:border-blue-500/30 hover:shadow-lg hover:shadow-blue-500/10"
          >
            <label
              class="block text-sm font-medium text-slate-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-blue-400"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Artist
            </label>
            <select
              data-testid="artist-dropdown"
            >
              <option
                value=""
              >
                Select Artist
              </option>
              <option
                value="1"
              >
                Test Artist
              </option>
            </select>
          </div>
          <div
            class="group bg-slate-800/40 rounded-lg border border-slate-700/50 p-4 transition-all duration-200 hover:bg-slate-800/60 hover:border-purple-500/30 hover:shadow-lg hover:shadow-purple-500/10"
          >
            <label
              class="block text-sm font-medium text-slate-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-purple-400"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9 19V6l12-3v13M9 19c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zm12-3c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zM9 10l12-3"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Genre
            </label>
            <select
              data-testid="genre-dropdown"
            >
              <option
                value=""
              >
                Select Genre
              </option>
              <option
                value="1"
              >
                Metal
              </option>
            </select>
          </div>
          <div
            class="group bg-slate-800/40 rounded-lg border border-slate-700/50 p-4 transition-all duration-200 hover:bg-slate-800/60 hover:border-green-500/30 hover:shadow-lg hover:shadow-green-500/10"
          >
            <label
              class="block text-sm font-medium text-slate-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-green-400"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 7h.01M7 3h5c.512 0 1.024.195 1.414.586l7 7a2 2 0 010 2.828l-7 7a2 2 0 01-2.828 0l-7-7A1.994 1.994 0 013 12V7a4 4 0 014-4z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Label
            </label>
            <select
              data-testid="label-dropdown"
            >
              <option
                value=""
              >
                Select Label
              </option>
              <option
                value="1"
              >
                Test Label
              </option>
            </select>
          </div>
          <div
            class="group bg-slate-800/40 rounded-lg border border-slate-700/50 p-4 transition-all duration-200 hover:bg-slate-800/60 hover:border-yellow-500/30 hover:shadow-lg hover:shadow-yellow-500/10"
          >
            <label
              class="block text-sm font-medium text-slate-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-yellow-400"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Country
            </label>
            <select
              data-testid="country-dropdown"
            >
              <option
                value=""
              >
                Select Country
              </option>
              <option
                value="1"
              >
                UK
              </option>
            </select>
          </div>
          <div
            class="group bg-slate-800/40 rounded-lg border border-slate-700/50 p-4 transition-all duration-200 hover:bg-slate-800/60 hover:border-pink-500/30 hover:shadow-lg hover:shadow-pink-500/10"
          >
            <label
              class="block text-sm font-medium text-slate-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-pink-400"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9 19V6l12-3v13M9 19c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zm12-3c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zM9 10l12-3"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="3"
                />
              </svg>
              Format
            </label>
            <select
              data-testid="format-dropdown"
            >
              <option
                value=""
              >
                Select Format
              </option>
              <option
                value="1"
              >
                Vinyl
              </option>
            </select>
          </div>
          <div
            class="group bg-slate-800/40 rounded-lg border border-slate-700/50 p-4 transition-all duration-200 hover:bg-slate-800/60 hover:border-red-500/30 hover:shadow-lg hover:shadow-red-500/10"
          >
            <label
              class="block text-sm font-medium text-slate-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-red-400"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 11a7 7 0 01-7 7m0 0a7 7 0 01-7-7m7 7v4m0 0H8m4 0h4m-4-8a3 3 0 01-3-3V5a3 3 0 116 0v6a3 3 0 01-3 3z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Recording Type
            </label>
            <div>
              <button
                type="button"
              >
                All recordings
              </button>
            </div>
          </div>
          <div
            class="group bg-slate-800/40 rounded-lg border border-slate-700/50 p-4 transition-all duration-200 hover:bg-slate-800/60 hover:border-cyan-500/30 hover:shadow-lg hover:shadow-cyan-500/10"
          >
            <label
              class="block text-sm font-medium text-slate-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-cyan-400"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              From Year
            </label>
            <input
              class="w-full px-3 py-2 bg-slate-700/50 border border-slate-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-cyan-500 focus:border-cyan-500 text-white placeholder-slate-400 transition-all"
              max="2025"
              min="1900"
              placeholder="e.g., 1970"
              type="number"
              value=""
            />
          </div>
          <div
            class="group bg-slate-800/40 rounded-lg border border-slate-700/50 p-4 transition-all duration-200 hover:bg-slate-800/60 hover:border-cyan-500/30 hover:shadow-lg hover:shadow-cyan-500/10"
          >
            <label
              class="block text-sm font-medium text-slate-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-cyan-400"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              To Year
            </label>
            <input
              class="w-full px-3 py-2 bg-slate-700/50 border border-slate-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-cyan-500 focus:border-cyan-500 text-white placeholder-slate-400 transition-all"
              max="2025"
              min="1900"
              placeholder="e.g., 2024"
              type="number"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchAndFilter — responsive checks renders a compact snapshot (mobile, tablet, desktop) for visual regression: searchandfilter-tablet 1`] = `
<DocumentFragment>
  <div
    class="modern-filter-panel bg-gradient-to-br from-slate-900 via-slate-800 to-slate-900 rounded-xl border border-slate-700/50 p-4 mb-4 sm:p-6 text-white shadow-2xl backdrop-blur-xl bg-opacity-90"
    style="width: 768px;"
  >
    <div
      class="space-y-4"
    >
      <div>
        <label
          class="block text-sm font-bold text-slate-200 mb-2 flex items-center gap-2"
          for="search"
        >
          <svg
            class="h-4 w-4 text-blue-400"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          Search Releases
        </label>
        <div
          class="relative"
        >
          <div
            class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none"
          >
            <svg
              class="h-5 w-5 text-slate-400"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <input
            autocomplete="off"
            class="block w-full pl-10 pr-3 py-3 bg-slate-800/50 border border-slate-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 text-white placeholder-slate-400 transition-all duration-200 hover:bg-slate-800/70"
            id="search"
            placeholder="Search by title, artist, or label..."
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        aria-hidden="false"
        class="transition-all duration-200 ease-in-out overflow-hidden max-h-[1200px] opacity-100 translate-y-0 py-1"
      >
        <div
          class="flex items-center justify-between mb-3"
        >
          <h3
            class="text-sm font-semibold text-slate-200 flex items-center gap-2"
          >
            <svg
              class="w-4 h-4 text-blue-400"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 4a1 1 0 011-1h16a1 1 0 011 1v2.586a1 1 0 01-.293.707l-6.414 6.414a1 1 0 00-.293.707V17l-4 4v-6.586a1 1 0 00-.293-.707L3.293 7.293A1 1 0 013 6.586V4z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
            Filters
          </h3>
          <button
            aria-label="Close filters"
            class="inline-flex items-center justify-center p-1.5 rounded-lg hover:bg-slate-700/50 transition-colors"
            title="Close filters"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-x w-4 h-4 text-slate-300"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 6 6 18"
              />
              <path
                d="m6 6 12 12"
              />
            </svg>
          </button>
        </div>
        <div
          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"
        >
          <div
            class="group bg-slate-800/40 rounded-lg border border-slate-700/50 p-4 transition-all duration-200 hover:bg-slate-800/60 hover:border-blue-500/30 hover:shadow-lg hover:shadow-blue-500/10"
          >
            <label
              class="block text-sm font-medium text-slate-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-blue-400"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Artist
            </label>
            <select
              data-testid="artist-dropdown"
            >
              <option
                value=""
              >
                Select Artist
              </option>
              <option
                value="1"
              >
                Test Artist
              </option>
            </select>
          </div>
          <div
            class="group bg-slate-800/40 rounded-lg border border-slate-700/50 p-4 transition-all duration-200 hover:bg-slate-800/60 hover:border-purple-500/30 hover:shadow-lg hover:shadow-purple-500/10"
          >
            <label
              class="block text-sm font-medium text-slate-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-purple-400"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9 19V6l12-3v13M9 19c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zm12-3c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zM9 10l12-3"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Genre
            </label>
            <select
              data-testid="genre-dropdown"
            >
              <option
                value=""
              >
                Select Genre
              </option>
              <option
                value="1"
              >
                Metal
              </option>
            </select>
          </div>
          <div
            class="group bg-slate-800/40 rounded-lg border border-slate-700/50 p-4 transition-all duration-200 hover:bg-slate-800/60 hover:border-green-500/30 hover:shadow-lg hover:shadow-green-500/10"
          >
            <label
              class="block text-sm font-medium text-slate-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-green-400"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 7h.01M7 3h5c.512 0 1.024.195 1.414.586l7 7a2 2 0 010 2.828l-7 7a2 2 0 01-2.828 0l-7-7A1.994 1.994 0 013 12V7a4 4 0 014-4z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Label
            </label>
            <select
              data-testid="label-dropdown"
            >
              <option
                value=""
              >
                Select Label
              </option>
              <option
                value="1"
              >
                Test Label
              </option>
            </select>
          </div>
          <div
            class="group bg-slate-800/40 rounded-lg border border-slate-700/50 p-4 transition-all duration-200 hover:bg-slate-800/60 hover:border-yellow-500/30 hover:shadow-lg hover:shadow-yellow-500/10"
          >
            <label
              class="block text-sm font-medium text-slate-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-yellow-400"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Country
            </label>
            <select
              data-testid="country-dropdown"
            >
              <option
                value=""
              >
                Select Country
              </option>
              <option
                value="1"
              >
                UK
              </option>
            </select>
          </div>
          <div
            class="group bg-slate-800/40 rounded-lg border border-slate-700/50 p-4 transition-all duration-200 hover:bg-slate-800/60 hover:border-pink-500/30 hover:shadow-lg hover:shadow-pink-500/10"
          >
            <label
              class="block text-sm font-medium text-slate-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-pink-400"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9 19V6l12-3v13M9 19c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zm12-3c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zM9 10l12-3"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="3"
                />
              </svg>
              Format
            </label>
            <select
              data-testid="format-dropdown"
            >
              <option
                value=""
              >
                Select Format
              </option>
              <option
                value="1"
              >
                Vinyl
              </option>
            </select>
          </div>
          <div
            class="group bg-slate-800/40 rounded-lg border border-slate-700/50 p-4 transition-all duration-200 hover:bg-slate-800/60 hover:border-red-500/30 hover:shadow-lg hover:shadow-red-500/10"
          >
            <label
              class="block text-sm font-medium text-slate-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-red-400"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 11a7 7 0 01-7 7m0 0a7 7 0 01-7-7m7 7v4m0 0H8m4 0h4m-4-8a3 3 0 01-3-3V5a3 3 0 116 0v6a3 3 0 01-3 3z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Recording Type
            </label>
            <div>
              <button
                type="button"
              >
                All recordings
              </button>
            </div>
          </div>
          <div
            class="group bg-slate-800/40 rounded-lg border border-slate-700/50 p-4 transition-all duration-200 hover:bg-slate-800/60 hover:border-cyan-500/30 hover:shadow-lg hover:shadow-cyan-500/10"
          >
            <label
              class="block text-sm font-medium text-slate-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-cyan-400"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              From Year
            </label>
            <input
              class="w-full px-3 py-2 bg-slate-700/50 border border-slate-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-cyan-500 focus:border-cyan-500 text-white placeholder-slate-400 transition-all"
              max="2025"
              min="1900"
              placeholder="e.g., 1970"
              type="number"
              value=""
            />
          </div>
          <div
            class="group bg-slate-800/40 rounded-lg border border-slate-700/50 p-4 transition-all duration-200 hover:bg-slate-800/60 hover:border-cyan-500/30 hover:shadow-lg hover:shadow-cyan-500/10"
          >
            <label
              class="block text-sm font-medium text-slate-300 mb-2 flex items-center gap-2"
            >
              <svg
                class="w-4 h-4 text-cyan-400"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              To Year
            </label>
            <input
              class="w-full px-3 py-2 bg-slate-700/50 border border-slate-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-cyan-500 focus:border-cyan-500 text-white placeholder-slate-400 transition-all"
              max="2025"
              min="1900"
              placeholder="e.g., 2024"
              type="number"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
